--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
+    "android": "expo start --android",    
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.6",
     "expo": "~45.0.0",
+    "expo-dev-client": "~1.0.0",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-paper": "^4.12.1",
+    "react-native-paper-dropdown": "^1.0.7",
+    "react-native-reanimated": "^2.8.0",
+    "react-native-snackbar": "^2.4.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
