--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",    
+    "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
@@ -15,10 +15,13 @@
     "expo-dev-client": "~1.0.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-moment": "^1.1.2",
     "react-native": "0.68.2",
     "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-draggable-flatlist": "^3.1.2",
     "react-native-paper": "^4.12.1",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-reanimated": "^2.8.0",
